QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Desktop environment session shutdown/logout management has been
  also adapted to Qt5 framework. (EXPERIMENTAL)

- Single/unique application instance control adapted to Qt5/X11.
  (EXPERIMENTAL)

- Prefer Qt5 over Qt4 by default with configure script.

- Overrideable tooltips with latency info (re. Connections JACK
  client/ports: patch by Xavier Mendez, thanks).

- Complete rewrite of Qt4 vs. Qt5 configure builds. (TESTING)

- French (fr) translation update (by Olivier Humbert, thanks).


0.4.0  2015-07-15  Summer'15 release frenzy.

- Some windows fixes added (patch by Kjetil Matheussen, thanks).

- Most advanced Setup/Settings are moved into new Setup/Advanced
  settings tab; limit range for the real-time priority setting,
  now having 6 as absolute minimum valid value (after patches by
  Robin Gareus, thanks).

- A new top-level widget window geometry state save and restore
  sub-routine is now in effect (EXPERIMENTAL).

- Delayed geometry setup for widget windows upon startup has
  been deprecated and scrapped altogether.

- Setup/settings dialog tab is going into some layout changes;
  also got rid of old patchbay auto-refresh timer cruft, which
  was previously hidden/disabled.

- New socket names are now automatically inferred from selected
  client names while on the Patchbay widget, Socket dialog.

- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.

- German (de) translation update (by Guido Scholz, thanks).


0.3.13  2015-03-25  Pre-LAC2015 release frenzy.

- Added application description as freedesktop.org's AppData.

- Setup dialog form is now modeless.

- Introducing brand new active patchbay reset/disconnect-all
  user preference option.

- Current highlighted client/port connections are now drawn
  with thicker connector lines.

- New user preference option on whether to show the nagging