@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- System tray icon red background now blinks when a XRUN occurs.
+
 - Desktop environment session shutdown/logout management has been
   also adapted to Qt5 framework. (EXPERIMENTAL)
 
